--- a/nginx/nginx-test.conf
+++ b/nginx/nginx-test.conf
@@ -2,11 +2,11 @@ server {
     # this server listens on 443
     listen 443 ssl;
     # incoming requests must have this hostname. change!
-    server_name my.site.com;
+    server_name my.domain.com;
     # the location of the tls cert. change!
-    ssl_certificate /etc/letsencrypt/live/my.site.com/fullchain.pem;
+    ssl_certificate /etc/letsencrypt/live/my.domain.com/fullchain.pem;
     # the location of the tls cert's private key. change!
-    ssl_certificate_key /etc/letsencrypt/live/wy.site.com/privkey.pem; # change this!
+    ssl_certificate_key /etc/letsencrypt/live/my.domain.com/privkey.pem; # change this!
     
     location / {
       # where nginx will serve files from. full path /usr/share/nginx/html
@@ -20,7 +20,7 @@ server {
     # this server listens on 80
     listen 80;
     # incoming requests must have this hostname. change!
-    server_name my.site.com;
+    server_name my.domain.com;
 
     # the location Let's Encrypt challenge will make requests to
     location /.well-known/acme-challenge/ {
